--- a/app/assets/stylesheets/profiles.css.sass
+++ b/app/assets/stylesheets/profiles.css.sass
@@ -20,6 +20,19 @@
 .profile-badges
   margin-top: 100px
 
+.profile-photo-btn
+  color: black
+  position: absolute
+  top: 60px
+  left: 50%
+  margin-left: -25px
+  font-size: 100px
+  font-weight: bold
+  @include transition(all 100ms)
+  &:hover
+    text-decoration: none
+    color: $orange
+
 @media (max-width: 1200px)
   .profile-cover
     .profile-image
