[homepage] fix capitalization issues

--- a/app/views/home/_index_B.html.haml
+++ b/app/views/home/_index_B.html.haml
@@ -15,7 +15,7 @@
       .span7
         %p.lead 
           %br
-          %strong With award-winning Chefs to Help You Succeed
+          %strong With Award-Winning Chefs to Help You Succeed
           %br
           The James Beard award-winning culinary team at ChefSteps, along with its active global community of both novice and experienced cooks, will help you become more confident and creative in the kitchen.
 
@@ -57,7 +57,7 @@
       .row.section
         .span8.offset2
           %p.lead
-            %strong Get Involved with a Passionate Community
+            %strong Get Involved With a Passionate Community
             %br
             Our forum is an incredibly active and friendly community of both novice and experienced cooks, as well as many professional chefs, including the award-winning creative team behind Modernist Cuisine. Sign up and get your questions about cooking answered, often within minutes.
 
