[upload] rearrange upload form

--- a/app/views/activities/_assignments.html.haml
+++ b/app/views/activities/_assignments.html.haml
@@ -15,16 +15,6 @@
 .row-fluid
   %hr
 
-- if current_user
-  - ids = @activity.assignments.map(&:child_activity_id)
-  - current_user.uploads.where(:uploads => {:activity_id => ids}).each do |upload|
-    .row-fluid
-      .span4
-        = image_tag filepicker_gallery_image(upload.image_id)
-      .span8
-        %h4= upload.recipe_name
-        %p= upload.notes
-
 = form_for @upload do |f|
   = f.hidden_field :activity_id
   .row-fluid
@@ -39,7 +29,20 @@
       %p= f.text_field :recipe_name, class: 'input-block-level', required: true
       %h4 Notes
       %p= f.text_area :notes, rows: 3, class: 'input-block-level', required: true
-      = f.submit 'Finish The Course!', class: 'btn btn-primary btn-large'
+      = f.submit 'Upload', class: 'btn btn-primary btn-large'
+
+.row-fluid      
+  %hr
+
+- if current_user
+  - ids = @activity.assignments.map(&:child_activity_id)
+  - current_user.uploads.where(:uploads => {:activity_id => ids}).each do |upload|
+    .row-fluid
+      .span4
+        = image_tag filepicker_gallery_image(upload.image_id)
+      .span8
+        %h4= upload.recipe_name
+        %p= upload.notes
 
 = render 'layouts/filepicker'
 
