--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -103,7 +103,7 @@
             .span12
               .row
                 .span5.offset1
-                  %h3 Join the Community
+                  %h3= ab_test 'bottom_popup_copy_1', 'Join the Community', 'Cook Better Than You Ever Thought Possible', 'Learn How to Be a Better Cook'
                   = form_tag welcome_url, :method => :get do
                     = email_field_tag 'email', nil, {class: 'input-signup-email', placeholder: 'Enter email', required: true}
                     = hidden_field_tag :signed_up_from, 'bottom_popup_cta'
