equipment now uses haml template

--- a/app/views/activities/_main_activity_content.html.haml
+++ b/app/views/activities/_main_activity_content.html.haml
@@ -16,7 +16,7 @@
       %csEditPairEdit
         = text_area_tag :description, "", {rows: "15", data: {:'ng-model' => "activity.description"}, autofocus: 'autofocus'}
 
-    .section(csmonitorinputactivity="")
+    .section(ng-show="activity.ingredients.length" csmonitorinputactivity="")
       .activity-ingredients-list#full-ingredients-list.section{data: {target: ''}}
         .well
           = render 'ingredients_list', ingredients: activity.ingredients
