[registration] madlib password toggler

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -155,7 +155,7 @@ h1, h2, h3, h4
     line-height: 26px
 
 .input-underlined
-  input[type=text], input[type=email]
+  input[type=text], input[type=email], input[type=password]
     border: none
     box-shadow: none 
     border-bottom: 1px dashed gray
