--- a/app/views/home/_madlib.html.haml
+++ b/app/views/home/_madlib.html.haml
@@ -10,11 +10,16 @@
               %p
                 I am
                 %span.input-underlined
-                  = text_field_tag 'name', nil, {placeholder: 'name', required: true}
+                  = text_field_tag 'name', nil, {placeholder: 'name', required: true, id: 'madlib-name'}
                 and my email is
                 %span.input-underlined
-                  = email_field_tag 'email', nil, {placeholder: 'email', required: true}
+                  = email_field_tag 'email', nil, {placeholder: 'email', required: true, id: 'madlib-email'}
                 &#46;&nbsp;&nbsp;
               %p
                 I want to learn how to be a better cook.
+              %p.hide#madlib-password-wrapper
+                Please set my password to
+                %span.input-underlined
+                  = password_field_tag 'password', nil, {placeholder: 'password', required: true, id: 'madlib-password'}
+                &#46;
             = submit_tag 'Sign Up Now', class: 'btn btn-primary btn-large', id: 'subscribe-email'
