--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -161,8 +161,8 @@ h1, h2, h3, h4
     border-bottom: 1px dashed gray
     text-align: center
     padding: 0px
-  input[type=text], input[type=email]
-    width: 300px
+  input[type=text], input[type=email], input[type=password]
+    width: 260px
 
 .gallery
   .media-centered
