--- a/app/views/home/_madlib.html.haml
+++ b/app/views/home/_madlib.html.haml
@@ -3,24 +3,46 @@
     .container
       .row
         .span8.offset2
-          = form_tag welcome_url, :method => :get, class: 'form-inline' do
-            .madlib
-              %p.text-orange
-                Hi ChefSteps,
-              %p
-                I am
-                %span.input-underlined
-                  = text_field_tag 'name', nil, {placeholder: 'name', required: true, id: 'madlib-name'}
-                and my email is
-                %span.input-underlined
-                  = email_field_tag 'email', nil, {placeholder: 'email', required: true, id: 'madlib-email'}
-                &#46;&nbsp;&nbsp;
-              %p
-                I want to learn how to be a better cook.
-              %p.hide#madlib-password-wrapper
-                Please set my password to
-                %span.input-underlined
-                  = password_field_tag 'password', nil, {placeholder: 'password', required: true, id: 'madlib-password'}
-                  = link_to 'Show', 'javascript:void(0);', class: 'btn', id: 'show-madlib-password'
-                &#46;
-            = submit_tag 'Sign Up Now', class: 'btn btn-primary btn-large', id: 'subscribe-email'
+          - ab_test('homepage_madlib_password', 'without_password', 'with_password') do |test|
+            - if test == 'without_password'
+              %h1 Without
+              = form_tag welcome_url, :method => :get, class: 'form-inline' do
+                .madlib
+                  %p.text-orange
+                    Hi ChefSteps,
+                  %p
+                    I am
+                    %span.input-underlined
+                      = text_field_tag 'name', nil, {placeholder: 'name', required: true}
+                    and my email is
+                    %span.input-underlined
+                      = email_field_tag 'email', nil, {placeholder: 'email', required: true}
+                    &#46;&nbsp;&nbsp;
+                  %p
+                    I want to learn how to be a better cook.
+                = submit_tag 'Sign Up Now', class: 'btn btn-primary btn-large', id: 'subscribe-email'
+            - else
+              %h1 With
+              = form_for @user, url: registration_path(@user), class: 'form-inline' do |f|
+                .madlib
+                  %p.text-orange
+                    Hi ChefSteps,
+                  %p
+                    I am
+                    %span.input-underlined
+                      = f.text_field :name, {placeholder: 'name', required: true, id: 'madlib-name'}
+                    and my email is
+                    %span.input-underlined
+                      = f.email_field :email, {placeholder: 'email', required: true, id: 'madlib-email'}
+                    &#46;&nbsp;&nbsp;
+                  %p
+                    I want to learn how to be a better cook.
+                  %p.hide#madlib-password-wrapper
+                    Please set my password to
+                    %span.input-underlined
+                      = f.password_field :password, {placeholder: 'password', required: true, id: 'madlib-password'}
+                      / = f.password_field :password_confirmation, {placeholder: 'password', required: true, id: 'madlib-password'}
+                      = link_to 'Show', 'javascript:void(0);', class: 'btn', id: 'show-madlib-password'
+                    &#46;
+                  = f.submit 'Sign Up Now', class: 'btn btn-primary btn-large', id: 'subscribe-email'
+            
