--- a/app/views/activities/_ingredients_list.html.haml
+++ b/app/views/activities/_ingredients_list.html.haml
@@ -1,28 +1,13 @@
-%table.ingredients{:itemprop => "ingredients"}
+.ingredients{:itemprop => "ingredients"}
 
-  %thead
-    %tr
-      %th#ingredient Ingredient
-      %th#quantity{colspan: 2}
+  .ingredient-table-head
+    .ingredient-table-row
+      #ingredient.ingredient-title Ingredient
+      #quantity.quantity-group
         %a.change_units{title: "Click to change units"} Quantity
         %a.recipetip{href: "#", rel: "infotip", "data-original-title" => "Click on quantity column header to change units, or any value to scale the recipe."}
           %i.icon-question-sign
 
-  %tbody
-    %tr.ingredient-item(ng-repeat="ai in activity.ingredients" ng-class="equipmentBulletStyle()"){data: {:'ingredient-id' => "{{ai.ingredient.id}}"}}
-      %td.ingredient-title
-        .pull-left(ng-switch on="ingredient_display_type(ai)")
-          %div(ng-switch-when="basic" ng-bind-html-unsafe="ai.ingredient.title")
-          %a(ng-switch-when="product" ng-href="{{ai.ingredient.product_url}}" target='_blank' ng-bind-html-unsafe="ai.ingredient.title")
-          %a(ng-switch-when="subrecipe" ng-href="{{'/activities/' + ai.ingredient.sub_activity_id}}" ng-bind-html-unsafe="ai.ingredient.title" target="_blank"){onclick: "addScalingToLink(this);"}
-        .pull-left(ng-show="!!ai.note" ng-bind-html-unsafe="', ' + (ai.note | shortcode)")
-
-      %td
-        .prependable
-
-      %td.quantity-group.qtyfade
-        .lbs-qty(csscalingeditable){style: "display: none;"}
-        .lbs-label
-        .main-qty(csscalingeditable ng-bind="ai.display_quantity"){data: {:"orig-value" => "{{ai.display_quantity * unitMultiplier(ai.unit)}}"}}
-
-      %td.unit.qtyfade(ng-bind="ai.unit")
+  .ingredient-table-body
+    .ingredient-table-row(ng-repeat="ai in activity.ingredients"){data: {:'ingredient-id' => "{{ai.ingredient.id}}"}}
+      %csIngredientEditPair
