--- a/app/views/activities/_ingredients_list.html.haml
+++ b/app/views/activities/_ingredients_list.html.haml
@@ -9,5 +9,5 @@
           %i.icon-question-sign
 
   .ingredient-table-body
-    .ingredient-table-row(ng-repeat="ai in activity.ingredients"){data: {:'ingredient-id' => "{{ai.ingredient.id}}"}}
+    .ingredient-table-row(ng-repeat="ai in activity.ingredients")
       %csIngredientEditPair
