--- a/app/views/activities/_main_activity_content.html.haml
+++ b/app/views/activities/_main_activity_content.html.haml
@@ -49,8 +49,8 @@
 
     .section(csmonitorinputactivity="")
       %h4(ng-show="hasRequiredEquipment()") Equipment and Materials
-      %ul.equipment(ui-sortable="equipmentSortOptions" ng-model="activity.equipment")
-        %li(ng-repeat="item in activity.equipment | filter:requiredEquipment" ng-class="equipmentBulletStyle()")
+      %ul.equipment(ui-sortable="sortOptions" ng-model="activity.equipment")
+        %li(ng-repeat="item in activity.equipment | filter:requiredEquipment")
           %csEquipmentEditPair(csOptional="false")
       .nav
         %button.btn.btn-small.btn-basic.add-section(ng-show="editMode && ! hasRequiredEquipment()" ng-click="addEquipment(false)")
@@ -62,8 +62,8 @@
 
     .section(csmonitorinputactivity="")
       %h4(ng-show="hasOptionalEquipment()") Optional Equipment and Materials
-      %ul.equipment(ui-sortable="equipmentSortOptions" ng-model="activity.equipment")
-        %li(ng-repeat="item in activity.equipment | filter:optionalEquipment" ng-class="equipmentBulletStyle()")
+      %ul.equipment(ui-sortable="sortOptions" ng-model="activity.equipment")
+        %li(ng-repeat="item in activity.equipment | filter:optionalEquipment")
           %csEquipmentEditPair(csOptional="true")
       .nav
         %button.btn.btn-small.btn-basic.add-section(ng-show="editMode && ! hasOptionalEquipment()" ng-click="addEquipment(true)")
