--- a/app/assets/javascripts/angular/templates/_ingredient_edit_pair.html.haml
+++ b/app/assets/javascripts/angular/templates/_ingredient_edit_pair.html.haml
@@ -15,6 +15,10 @@
     .unit.qtyfade(ng-bind="ai.unit")
 
   %csEditPairEdit
-    %input(csinputmonkeyingredient="" type="text" placeholder="New ingredient" typeahead-editable="true" autofocus="autofocus" autocomplete="off" class="ingredient-typeahead" ng-model="ai.ingredient" typeahead="i as i.ingredient for i in all_ingredients($viewValue)")
     .remove-button(ng-click="removeIngredient()")
       %i.icon-remove
+    .ingredient-title
+      %input(csselectonfocus="" csinputmonkeyingredient="" type="text" placeholder="New ingredient" typeahead-editable="true" autofocus="autofocus" autocomplete="off" class="ingredient-typeahead" ng-model="ai.ingredient" typeahead="i as i.title for i in all_ingredients($viewValue)")
+      %input(csselectonfocus="" type="text" placeholder="note" autocomplete="off" ng-model="ai.note")
+    %input.quantity-group(csselectonfocus="" type="text" placeholder="qty" autocomplete="off" ng-model="ai.display_quantity")
+    %input.unit(csselectonfocus="" type="text" ng-model="ai.unit" required="true" typeahead="u for u in ['g', 'kg', 'ea', 'a/n', 'recipe']")
