--- a/app/views/courses/spherification.html.haml
+++ b/app/views/courses/spherification.html.haml
@@ -38,13 +38,13 @@
         Be more creative in the kitchen
   .row
     .span4
-      =image_tag 'http://placehold.it/570x320'
+      =image_tag 'https://www.filepicker.io/api/file/RY0MPYKRRkOLpCNqGZpN'
       %h4.text-center Reverse Spheres
     .span4
-      =image_tag 'http://placehold.it/570x320'
+      =image_tag 'https://www.filepicker.io/api/file/BwIi8kdRFGLEIWaWcXPI'
       %h4.text-center Frozen Reverse Spheres
     .span4
-      =image_tag 'http://placehold.it/570x320'
+      =image_tag 'https://www.filepicker.io/api/file/PFUrsvzWReCkVxlMGXBG'
       %h4.text-center Direct Spheres
   .row.section
     .span12
@@ -61,7 +61,8 @@
           %h3.orange= "The Creative Kit"
       .row.section
         .span5.offset1
-          = image_tag 'http://placehold.it/570x320'
+          = image_tag 'https://www.filepicker.io/api/file/cFWqOq07TTyCzGPhs6Kn'
+          /= image_tag 'https://www.filepicker.io/api/file/5wKEDSXZQgCgtA5W7JxI'
           %h4= "The Creative Kit includes"
           %ul
             %li Syringe for direct spherification
@@ -73,7 +74,8 @@
             %li 50 g Calcium Chloride
             %li 50 g Xanthan Gum
         .span5
-          = image_tag 'http://placehold.it/570x320'
+          = image_tag 'https://www.filepicker.io/api/file/Mn5unIy2TSGXjBRiRsnj'
+          /= image_tag 'https://www.filepicker.io/api/file/ZZk2FdB3TcXndhp2tihA
           %h4= "The Creative Kit takes you through these lessons"
           %ul
             - @creative.each do |activity|
@@ -92,7 +94,7 @@
           %h3.orange= "The Enthusiast Kit"
       .row.section
         .span5.offset1
-          = image_tag 'http://placehold.it/570x320'
+          = image_tag 'https://www.filepicker.io/api/file/kBzOoRGkRsmpKSZPg9fg'
           %h4= "The Enthusiast Kit includes"
           %ul
             %li Syringe for direct spherification
@@ -104,7 +106,8 @@
             %li 50 g Calcium Chloride
             %li 50 g Xanthan Gum
         .span5
-          = image_tag 'http://placehold.it/570x320'
+          = image_tag 'https://www.filepicker.io/api/file/10jMQrfrTYazji1Sc4XA'
+          /= image_tag 'https://www.filepicker.io/api/file/NiJGuT9RkOOY9RUqDpyQ'
           %h4= "The Enthusiast Kit takes you through these lessons"
           %ul
             - @enthusiast.each do |activity|
@@ -124,7 +127,7 @@
           %h3.orange= "The Professional Kit"
       .row.section
         .span5.offset1
-          = image_tag 'http://placehold.it/570x320'
+          = image_tag 'https://www.filepicker.io/api/file/gV7vpXwSXi4eqHfOf1ED'
           %h4= "The Professional Kit includes"
           %ul
             %li Syringe for direct spherification
@@ -136,7 +139,8 @@
             %li 50 g Calcium Chloride
             %li 50 g Xanthan Gum
         .span5
-          = image_tag 'http://placehold.it/570x320'
+          = image_tag 'https://www.filepicker.io/api/file/FBnDnqcUQRetfBswxNzq'
+          /= image_tag 'https://www.filepicker.io/api/file/KLRyOQ6fTB2K2y2rc2Gq'
           %h4= "The Professional Kit takes you through these lessons"
           %ul
             - @professional.each do |activity|
