--- a/app/assets/javascripts/angular/templates/_equipment_edit_pair.html.haml
+++ b/app/assets/javascripts/angular/templates/_equipment_edit_pair.html.haml
@@ -7,8 +7,7 @@
       %span(ng-switch-default="")
         {{item.equipment.title || item.equipment}}&nbsp;
   %csEditPairEdit
-    %span.drag-handle
-      %i.icon-sort
-    %span.remove-button(ng-click="removeItem()")
-      %i.icon-remove
+    .action-button-group
+      %i.drag-handle.icon-sort
+      %i.remove-button.icon-remove(ng-click="removeItem()")
     %input(csinputmonkeyequipment="" type="text" placeholder="New equipment" typeahead-editable="true" autofocus="autofocus" autocomplete="off" class="equipment-typeahead" ng-model="item.equipment" typeahead="e as e.title for e in all_equipment($viewValue)")
