--- a/app/views/activities/_quiz_content.html.haml
+++ b/app/views/activities/_quiz_content.html.haml
@@ -5,7 +5,7 @@
 .row-fluid
   .span12
     - quiz = @activity.quizzes.first
-    %iframe{src: quiz_path(quiz), style: 'width: 100%; border: none; min-height: 100%', id: 'course-quiz', onload: "window.adjust_iframe_height('course-quiz');"}
+    %iframe{src: quiz_path(quiz), style: 'width: 100%; border: none; min-height: 1000px; overflow: hidden;', id: 'course-quiz', onload: "window.adjust_iframe_height(this);"}
 
     / #quizzes.hero-well.noprint
     /   .container
