[quiz] update order sort width

--- a/app/assets/stylesheets/application/quizzes/_question.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_question.css.sass
@@ -55,7 +55,7 @@
 
   .grid-item
     position: absolute
-    width: 250px
+    width: 20%
     height: 185px
     background-color: #d15129
     text-indent: 10px
