direct edit on hover working well

--- a/app/assets/javascripts/angular/templates/_equipment_edit_pair.html.haml
+++ b/app/assets/javascripts/angular/templates/_equipment_edit_pair.html.haml
@@ -10,4 +10,4 @@
     .action-button-group
       %i.drag-handle.icon-sort
       %i.remove-button.icon-remove(ng-click="removeItem()")
-    %input(csinputmonkeyequipment="" type="text" placeholder="New equipment" typeahead-editable="true" autofocus="autofocus" autocomplete="off" class="equipment-typeahead" ng-model="item.equipment" typeahead="e as e.title for e in all_equipment($viewValue)")
+    %input(csselectonfocus="" csinputmonkeyequipment="" type="text" placeholder="New equipment" typeahead-editable="true" autocomplete="off" class="equipment-typeahead" ng-model="item.equipment" typeahead="e as e.title for e in all_equipment($viewValue)")
