[quiz] results tweaks

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -145,6 +145,9 @@ h1, h2, h3, h4
 .indent-2
   padding-left: 40px
 
+.indent-3
+  padding-left: 60px
+
 ////////////////////////////////////////
 
 /* Media Objects */
