--- a/app/views/quizzes/_multiple_choice_question_results.html.haml
+++ b/app/views/quizzes/_multiple_choice_question_results.html.haml
@@ -1,5 +1,5 @@
 - if !results.empty?
-  .results-header.row
+  .results-header.row-fluid
     .span6
       .center
         Multiple Choice Questions:
