--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -12,6 +12,10 @@
     .row
       margin-left: inherit
 
+.no-margin-padding
+  padding: 0px
+  margin: 0px
+
 .container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container
   width: 1170px
 
@@ -1227,6 +1231,10 @@ csequipmenteditpair
     margin-left: -20px
     margin-right: -20px
 
+  .no-margin-padding
+    padding: 0px
+    margin: 0px
+
 /* Landscape phone to portrait tablet */
 @media (max-width: 767px)
   .container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container
@@ -1300,6 +1308,10 @@ csequipmenteditpair
   .container-fluid
     margin-left: -20px
     margin-right: -20px
+
+  .no-margin-padding
+    padding: 0px
+    margin: 0px
  
 /* Landscape phones and down */
 @media (max-width: 480px)
