--- a/app/views/quizzes/show.html.haml
+++ b/app/views/quizzes/show.html.haml
@@ -8,19 +8,19 @@
 
 .quiz-wrapper
   .quiz-title
-    .container
-      .row
+    .container-fluid
+      .row-fluid
         .span12
           %h2= quiz.title
 
   #quiz-container
-    .container
-      .row
+    .container-fluid
+      .row-fluid
         .span12
           %h3
             = quiz.started_by?(current_user) ? "Welcome back to" : "Test your skills on"
             %strong #{quiz.title}!
-      .row.overview
+      .row-fluid.overview
         .span8
           - if quiz.has_image?
             = image_tag quiz.image.url, class: 'img-polaroid'
@@ -43,7 +43,7 @@
                 %span= estimated_mins(remaining_question_count)
                 %br
                 est. min. remaining
-      .row
+      .row-fluid
         .span12
           %p.pull-left= quiz.start_copy
           .pull-right
