--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -19,6 +19,9 @@
 .container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container
   width: 1170px
 
+.relative
+  position: relative
+
 #slider-container
   background: $offwhite
   .row
@@ -833,6 +836,9 @@ h1, h2, h3, h4
 
 /* Quiz button */
 .btn-next, .btn-prev
+  position: absolute
+  bottom: 0px
+  right: 0px
   height: 67px
   width: 32px
   padding: 0
