--- a/app/views/quizzes/show.html.haml
+++ b/app/views/quizzes/show.html.haml
@@ -8,13 +8,13 @@
 
 .quiz-wrapper
   .quiz-title
-    .container-fluid
+    .container-fluid.no-margin-padding
       .row-fluid
         .span12
           %h2= quiz.title
 
   #quiz-container
-    .container-fluid
+    .container-fluid.no-margin-padding
       .row-fluid
         .span12
           %h3
