[quiz] update order sort results

--- a/app/assets/stylesheets/application/quizzes/_question.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_question.css.sass
@@ -55,17 +55,15 @@
 
   .grid-item
     position: absolute
-    width: 20%
+    width: 24%
     height: 185px
     background-color: #d15129
-    text-indent: 10px
     color: #fff
     font-style: italic
-    line-height: 40px
 
     .caption
       text-style: italic
-      padding-right: 10px
+      padding: 10px
 
     img
       display: block
@@ -85,6 +83,12 @@
 
     .num.show
       display: inline-block
+      float: left
+
+    .caption-text
+      height: 20px
+      width: 80%
+      float: right
 
   .step-marker
     background-color: #ddd
