--- a/app/views/quizzes/_order_sort_question_result.html.haml
+++ b/app/views/quizzes/_order_sort_question_result.html.haml
@@ -22,4 +22,5 @@
         .caption
           .num.show
             = index + 1
-          = image[:caption]
+          .caption-text
+            = image[:caption]
