--- a/app/assets/javascripts/angular/templates/_equipment_edit_pair.html.haml
+++ b/app/assets/javascripts/angular/templates/_equipment_edit_pair.html.haml
@@ -7,7 +7,7 @@
       %span(ng-switch-default="")
         {{item.equipment.title || item.equipment}}&nbsp;
   %csEditPairEdit
-    .action-button-group
+    .action-button-group(ng-show="focusedInside()")
       %i.drag-handle.icon-sort
       %i.remove-button.icon-remove(ng-click="removeItem()")
     %input(csselectonfocus="" csinputmonkeyequipment="" type="text" placeholder="New equipment" typeahead-editable="true" autocomplete="off" class="equipment-typeahead" ng-model="item.equipment" typeahead="e as e.title for e in all_equipment($viewValue)")
