[course] fix video height problem

--- a/app/views/activities/_main_course_activity_content.html.haml
+++ b/app/views/activities/_main_course_activity_content.html.haml
@@ -3,13 +3,13 @@
 
 .row-fluid
   .span12.section
-    .video-container{:itemscope => true, :itemprop => "video", :itemtype => "http://schema.org/VideoObject"}
+    .video-container{:itemscope => true, :itemprop => "video", :itemtype => "http://schema.org/VideoObject", :csenforceaspect => true}
       - if activity.youtube_id?
         .noprint
           - if params[:autoplay]
-            %iframe{src: youtube_url(activity.youtube_id, 1)}
+            %iframe(ng-style="setHeight()" csenforceaspect){src: youtube_url(activity.youtube_id, 1)}
           - else
-            %iframe{src: youtube_url(activity.youtube_id)}
+            %iframe(ng-style="setHeight()" csenforceaspect){src: youtube_url(activity.youtube_id)}
       - elsif activity.image_id?
         = image_tag filepicker_activity_hero_image(activity.image_id), alt: activity.title, title: activity.title, itemprop: 'image'
       - elsif activity.featured_image_id?
