--- a/app/views/activities/course_activity.html.haml
+++ b/app/views/activities/course_activity.html.haml
@@ -1,4 +1,6 @@
-.container
+- @body_tag_attributes = {:'ng-app' => "ChefStepsApp"}
+
+.container{data: {:'activity-id' => @activity.id}}
   .row
     .span12.section
       %h2= link_to @course.title, @course
