--- a/app/views/activities/_main_activity_content.html.haml
+++ b/app/views/activities/_main_activity_content.html.haml
@@ -16,10 +16,17 @@
       %csEditPairEdit
         = text_area_tag :description, "", {rows: "15", data: {:'ng-model' => "activity.description"}}
 
-    .section(ng-show="activity.ingredients.length" csmonitorinputactivity="")
+    .section.csmonitorinputactivity
       .activity-ingredients-list#full-ingredients-list.section{data: {target: ''}}
-        .well
+        .well(ng-show="activity.ingredients.length" )
           = render 'ingredients_list'
+      .nav
+        %button.btn.btn-small.btn-basic.add-section(ng-show="editMode && ! activity.ingredients.length" ng-click="addIngredient()")
+          Add Ingredient
+        %button.btn.btn-small.btn-basic.add-item(ng-show="editMode && activity.ingredients.length" ng-click="addIngredient()")
+          +
+        %button.btn.btn-small.btn-primary.done(ng-show="hasActiveInputs")
+          Done
 
     .section
       %csEditPair
@@ -97,7 +104,7 @@
                 %h4= step.title
               - if step.ingredients.any?
                 .step-ingredients-source.well
-                  = render 'ingredients_list', ingredients: step.ingredients
+                  = render 'old_ingredients_list', ingredients: step.ingredients
               :markdown
                 #{apply_shortcodes(step.directions)}
               .step-actions.btn-group
